src/objects/Sensor_Translator__c.object
<CustomObject>
    <fields>
        <fullName>Boolean__c</fullName>
        <formula>IF(Value__c = &quot;HIGH&quot;, &quot;on&quot;, &quot;off&quot;)</formula>
        <label>Boolean</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flex__c</fullName>
        <formula>IF( value(Value__c) &lt; 280, &quot;occupied. Have you gained weight?&quot;, &quot;empty. All clear.&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flex</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TMP36F__c</fullName>
        <formula>((((VALUE(Value__c) * 0.00322265625) - 0.33) * 100) * 1.8) + 32</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TMP36F</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <inlineHelpText>Value to be evaluated</inlineHelpText>
        <label>Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Sensor Translator</label>
    <nameField>
        <displayFormat>Translation {000000}</displayFormat>
        <label>Formula Translator Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sensor Translators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>